--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ kramdown:
 sass:
   sass_dir: _sass
   style: :compressed
-ganalytics: G-BRLCTG9Z94
+ganalytics: G-8LHLDC1EFZ
 
 # Authors
 authors:
